# strsplits

./: .gitignore  LICENSE  README.md  meson.build  strsplit.1  strsplit.c
bash-completion/: strsplit
debian/: changelog  control  copyright
